benchmark/http-load/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: benchmark
  annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - httpbin.cluster-hybrid.ddnsfree.com
      secretName: cluster-hybrid.ddnsfree.com-tls
  rules:
    - host: httpbin.cluster-hybrid.ddnsfree.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
